--- a/DL/two_new.ipynb
+++ b/DL/two_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -38,7 +38,7 @@
        "(PosixPath('datasets/two_new_new'), PosixPath('test/two_new_new'))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,23 +757,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'learn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-fa5b61306ef3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'learn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "learn.export()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "??load_learner"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +796,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc(open_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -805,27 +828,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc(model.predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(Category Vespa SXL 150,\n",
-       " tensor(11),\n",
-       " tensor([7.2538e-06, 5.6172e-05, 3.8408e-04, 3.5135e-02, 3.1817e-04, 5.9138e-04,\n",
-       "         4.1914e-05, 1.3687e-01, 9.2953e-04, 1.4628e-02, 4.4761e-05, 8.0922e-01,\n",
-       "         1.6341e-03, 1.4372e-04]))"
+       " [(tensor(0.8092), 'Vespa SXL 150'),\n",
+       "  (tensor(0.1369), 'TVS Jupiter'),\n",
+       "  (tensor(0.0351), 'Honda Activa 5G'),\n",
+       "  (tensor(0.0146), 'TVS Scooty Pep Plus'),\n",
+       "  (tensor(0.0016), 'Yamaha Fascino'),\n",
+       "  (tensor(0.0009), 'TVS NTORQ 125'),\n",
+       "  (tensor(0.0006), 'Honda Dio'),\n",
+       "  (tensor(0.0004), 'Hero Maestro Edge'),\n",
+       "  (tensor(0.0003), 'Honda CLIQ'),\n",
+       "  (tensor(0.0001), 'Yamaha Ray ZR'),\n",
+       "  (tensor(5.6172e-05), 'Hero Dare'),\n",
+       "  (tensor(4.4761e-05), 'TVS XL 100'),\n",
+       "  (tensor(4.1914e-05), 'Okinawa Praise'),\n",
+       "  (tensor(7.2538e-06), 'Aprilia SR 150')])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_class,pred_idx,outputs = model.predict(img)\n",
-    "pred_class, pred_idx, outputs"
+    "mapped=sorted(set(zip(outputs, model.data.classes)),reverse=True)\n",
+    "pred_class, mapped"
    ]
   },
   {
